version 0.39
	* Code cleanups (as always)
	* Fix empty Task tab on startup bug
	* Add configure step to locate libical header and clean
	  the makefile while we're at it
	* Allow event selection and edition in the week view
	* Fix ticket #10 (appointment going past midnight not
	  shown in the second day view)

version 0.38 (2009/03/18)
	* Fix tickets #6 and #7
	* Add a preliminary week view
	* Use a SelectionManager instead of various workarounds
	* Various code cleanups
	* Asynchronous load for distant stores on startup (try #3)
	* Add a tests/ folder with what should become a test suite
	* Automatic refresh and refresh interval in the preferences
	  panel, enabled only for the backends that support it
	* Fix ticket #8
	* Use libical recurrence handling and remove our old junk
	* Add menu entries to quickly change the selected date
	* Change date navigation in the calendar and reduce its size

version 0.37 (2008/11/02)
	* Fix buglets uncovered by libical 0.41
	* Fix summary view size on startup
	* Fix method used to compare dates. Should fix multiple bugs
	  with recurrent events
	* Better error handling on webdav resources
	* Fix week number calculation (ticket #3)

version 0.36 (2008/01/20)
	* Calendar UI changes : to reduce calendar size, use different
	  visual hints. Today has a yellow background (unchanged), the 
	  selected day cell is bezeled/pushed (was a bold font) and busy 
	  days use a bold font (instead of a tick mark). Always show six 
	  weeks with black text for the chosen month and white text for 
	  the previous and next ones. Use a defined font size so that it 
	  all fits whatever the user choose as a default size.
	* Day view : circle through appointments with TAB and edit the 
	  selected one with enter
	* Day view : no more appointments overlapping. The algorithm is
	  not 100% correct, we might want to change that in the future
	* Change license for future GNUstep GPLv3 release compatibility